# LykOS

./: .gitignore
apps/: meson.build
apps/console/: main.c  meson.build
apps/init/: main.c  meson.build
apps/tests/: meson.build
apps/tests/sockets/: client.c  meson.build  server.c
kernel/: meson.build
kernel/include/arch/: thread.h
kernel/include/arch/x86_64/abi/: stack.h
kernel/include/fs/: vfs.h
kernel/include/mm/: vm.h
kernel/include/mm/vm/: vm_object.h
kernel/include/sys/: elf.h  file.h  init.h  proc.h  syscall.h  thread.h
kernel/include/utils/: elf.h
kernel/source/: kernel.c
kernel/source/arch/x86_64/: paging.c  thread.c
kernel/source/arch/x86_64/abi/: stack.c
kernel/source/dev/virtual/: fb.c
kernel/source/fs/: meson.build  ramfs.c  ustar.c  vfs.c  vnode.c
kernel/source/mm/vm/: meson.build  vm.c  vm_object.c  vm_shadow.c  vm_vnode.c
kernel/source/mod/: module.c
kernel/source/sys/: elf.c  init.c  meson.build  proc.c  sched.c  smp.c  thread.c
kernel/source/sys/file/: file.c  file_socket.c  file_vnode.c
kernel/source/sys/socket/: socket_unix.c
kernel/source/sys/syscalls/: fileio.c  proc.c  syscall.c
