executable(
    'test-sockets-client',
    'client.c',
    c_args: common_c_args,
    link_args: common_link_args,
    pie: false,
    install: true,
    install_dir: test_install_dir,
)

executable(
    'test-sockets-server',
    'server.c',
    c_args: common_c_args,
    link_args: common_link_args,
    pie: false,
    install: true,
    install_dir: test_install_dir,
)
